[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.0",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-link-share"
description = "JupyterLab Extension to share the URL to a running Jupyter Server"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Projet Jupyter Contributors" },
]
keywords = [
    "IPython",
    "Jupyter",
    "JupyterLab",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=1.11,<3",
]
version = "0.2.4"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jupyterlab-contrib/jupyterlab-link-share"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_link_share/labextension" = "share/jupyter/labextensions/jupyterlab-link-share"
"install.json" = "share/jupyter/labextensions/jupyterlab-link-share/install.json"
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/jupyter_notebook_config.d" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_link_share/labextension/static/style.js",
    "jupyterlab_link_share/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_link_share/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlab_link_share/labextension"
source_dir = "src"
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.2.4"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""

[license]
file = "LICENSE"
