[metadata]
name = jupyterlab-link-share
description = JupyterLab Extension to share the URL to a running Jupyter Server
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Projet Jupyter Contributors
url = https://github.com/jupyterlab-contrib/jupyterlab-link-share
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Widgets, IPython
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jupyter_server>=1.11,<3
